--- a/CoCo/package.json
+++ b/CoCo/package.json
@@ -1,7 +1,6 @@
 {
   "name": "coco",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +16,11 @@
   },
   "homepage": "https://github.com/baothi250501/PTUDW-19TN-Nhom03#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.6"
-  }
+    "express-handlebars": "^6.0.6",
+    "mogoose": "^0.0.1-security",
+    "mongoose": "^6.4.2"
+  },
+  "description": ""
 }
