--- a/CoCo/package.json
+++ b/CoCo/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/baothi250501/PTUDW-19TN-Nhom03#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "mongoose": "^6.4.2"
