--- a/CoCo/package.json
+++ b/CoCo/package.json
@@ -16,11 +16,13 @@
   },
   "homepage": "https://github.com/baothi250501/PTUDW-19TN-Nhom03#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "mogoose": "^0.0.1-security",
-    "mongoose": "^6.4.2"
+    "mongoose": "^6.4.2",
+    "multer": "^1.4.5-lts.1"
   },
   "description": ""
 }
