--- a/CoCo/package.json
+++ b/CoCo/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "method-override": "^3.0.0",
     "mogoose": "^0.0.1-security",
     "mongoose": "^6.4.2",
     "multer": "^1.4.5-lts.1"
