--- a/CoCo/package.json
+++ b/CoCo/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/baothi250501/PTUDW-19TN-Nhom03#readme",
   "dependencies": {
+    "@google-cloud/storage": "^6.2.2",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
